--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <h1> Anurag Sharma Portfolio</h1>
         <h2> I m a full Stack Web Developer</h2>
           <hr/>
-        <a href="./public/movie-ranking.html">Movie Ranking Project</a>
+       <h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3> 
         <img src ="./assets/images/Screenshot (61).png" width="400" height="300"/>
-        <a href ="./public/birthday-invite.html">Birthday Invite project</a>
+       <h3> <a href ="./public/birthday-invite.html">Birthday Invite project</a></h3> 
         <img src ="./assets/images/birthday.png" width="400"/>
          <hr/>
          <a href ="./public/about.html">About Me</a>
